feat: Add API header auth
