# Endpoint/Controllers/InfinityMirrorControllerImplementation.cs
@@ -7,9 +7,15 @@ public class InfinityMirrorControllerImplementation(EventGenerator eventGenerato
 {
     private IReadOnlyDictionary<string, IEnumerable<string>> emptyHeaders { get; } = new Dictionary<string, IEnumerable<string>>();
 
-    public Task<SwaggerResponse<DeceptionEventResponse>> GetDeceptionEventsAsync(DateTimeOffset? startingAt, DateTimeOffset? endingAt, int? limit, int? offset, string? user_Agent, string? authorization)
+    public Task<SwaggerResponse<DeceptionEventResponse>> GetDeceptionEventsAsync(DateTimeOffset? startingAt, DateTimeOffset? endingAt, int? limit, int? offset, string? user_Agent, string? apiKey)
     {
         var events = eventGenerator.GenerateEvents();
+
+        foreach(var ev in events)
+        {
+            ev.Properties.UserAgent = user_Agent;
+            ev.Properties.ApiKey = apiKey;
+        }
 
         return Task.FromResult(
             new SwaggerResponse<DeceptionEventResponse>(
